--- a/_posts/2023-01-10-INMEDIA-三男涉爬輕鐵車頂攀天秤航拍被捕-警批-為吸引公眾眼球.html
+++ b/_posts/2023-01-10-INMEDIA-三男涉爬輕鐵車頂攀天秤航拍被捕-警批-為吸引公眾眼球.html
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p>另外，影片亦顯示3名男子在除夕晚進入一個位於尖沙咀的地盤工地，行樓梯至高處，並爬上天秤頂端倒數，又表示「可以準備set 航拍」。3名男子在元旦日早上6時再次爬上天秤頂，並祝觀眾2023新年快樂。截至晚上10時，該影片獲2.8萬個讚好。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/orTT7824Vn" title="螢幕截圖 2023-01-10 下午11.25.11"><img src="https://live.staticflickr.com/65535/52618703797_c93f2dfea4_b.jpg" width="1024" alt="螢幕截圖 2023-01-10 下午11.25.11" /></a><br /><em>譚威信</em></p>
 <p><strong>三男今同被捕</strong></p>
-<p>警方網絡安全及科技罪案調查科署理高級警司譚威信指，今日在沙田及屯門拘捕三人，並檢獲3部手提電話、1部相機、1部無人機、1部平板電腦及1部運動攝錄機。</p>
+<p>警方網絡安全及科技罪案調查科署理高級警司譚威信指，今日在沙田、上水及屯門拘捕三人，並檢獲3部手提電話、1部相機、1部無人機、1部平板電腦及1部運動攝錄機。</p>
 <p>其中一名被捕24歲唐姓男子，報稱是送貨員。另一名是24歲李姓男子，報稱是機械維修員；餘下一人是21歲陳姓男子，報稱是學生。</p>
 <p>警方指，妨擾罪一經定罪最高刑罰是入獄7年；而《香港鐵路條例》「故意危害安全」罪最高罰款是10萬元及監禁3年。至於「未經許可在限制飛行區內進行飛行」，最高定罪可判罰款10萬元及監禁2年。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/fG0wCe52d0" title="螢幕截圖 2023-01-10 下午11.24.58"><img src="https://live.staticflickr.com/65535/52619699858_4eb268b3ee_b.jpg" width="1024" alt="螢幕截圖 2023-01-10 下午11.24.58" /></a><br /><em>陳志雄</em></p>
