--- a/_posts/2023-01-10-INMEDIA-涉反修例人士不獲發回鄉證-張欣宇稱不公-望內地部門協調.html
+++ b/_posts/2023-01-10-INMEDIA-涉反修例人士不獲發回鄉證-張欣宇稱不公-望內地部門協調.html
@@ -20,7 +20,8 @@ author: 獨媒報導
 <p>張欣宇曾在去年6月出席，屢被建制派點名批評的香港民研記者會，與一個青年倡議小組發布有關包裝袋的調查，惹人質疑他與民研合作。他今日解釋，當時受倡議小組邀請才出席，而該調查民研有份進行研究，「但當然，我係完全唔介意，我覺得只要做個件事係好，同埋有意義。咁一個機構嚟講，講真，佢係一個合法存在嘅機構，咁佢做呢件事係無問題，咁我哋嘅工作係engage唔同stakeholders ，我係完全無問題嘅。所以個日入到去有好大backdrop 打晒民研，當時都有同事問我介唔介意，我話唔介意，照坐」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/k70TL009xT" title="無標題"><img src="https://live.staticflickr.com/65535/52201983543_fcc73dbb8a_b.jpg" width="1024" alt="無標題" /></a><br /><em>資料圖片：張欣宇（左一）出席香港民研記者會</em></p>
 <p><strong>稱難突破選委補選</strong></p>
-<p>前立法會議員黃元山上月辭任，改任特首政策組組長，意味立法會又再有補選。被者問到所屬的「香港新方向」會否派人參選，張欣宇坦言難以突破選委補選，「我哋反而希望喺直選、專業界別可以突破到。」對於如區議會直選機制未能保留，張欣宇就表示若有更好的倡議平台都會參加，至於新加入的前公民黨觀塘區區議員的李煒林會否再次參選區議會，李煒林指不是為了參選才服務市民，不過張欣宇表示，若有直選必定會鼓勵成員參選，又透露「香港新方向」有派人參選日前的村代表選舉，二人均在沙頭角參選並成功當選。「香港新方向」工程及交通召集人黃偉信亦有一起見記者，他曾參選2021年立法會選舉，出戰工程界，並曾為民主派35+成員之一。</p>
+<p>前立法會議員黃元山上月辭任，改任特首政策組組長，意味立法會又再有補選。被者問到所屬的「香港新方向」會否派人參選，張欣宇坦言難以突破選委補選，「我哋反而希望喺直選、專業界別可以突破到。」對於如區議會直選機制未能保留，張欣宇就表示若有更好的倡議平台都會參加。</p>
+<p>至於新加入的前公民黨觀塘區區議員的李煒林會否再次參選區議會，李煒林指不是為了參選才服務市民，不過張欣宇表示，若有直選必定會鼓勵成員參選，又透露「香港新方向」有派人參選日前的村代表選舉，二人均在沙頭角參選並成功當選。「香港新方向」工程及交通召集人黃偉信亦有一起見記者，他曾參選2021年立法會選舉，出戰工程界，並曾為民主派35+成員之一。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R3Xu140KHM" title="無標題"><img src="https://live.staticflickr.com/65535/52618259892_4ba341dd11_b.jpg" width="1024" alt="無標題" /></a><br /><em>（左起）李煒林、張欣宇和黃偉信</em></p>
 <p>在任已一年，張欣宇透露今年將關注新界北的「丁權」問題。他指，「丁權」問題限制北部都會區發展，擔心將來的樓宇只能起興建3層樓高，阻礙土地開發。他表示，或會從內地「城中村」方向探討。另外，他表示將關注北區水貨客問題，如倡增加跨境申報，要求有關人士解釋出入境原因，以及設跨境預約制度。他又透露自己成功加入福利事務委員會，將關注照顧者保障，期望今年可重啟公聽會，讓市民就照顧者議題發表意見。</p>
 </div></div></div>
