--- a/_posts/2023-01-11-INMEDIA-南華會申建電競館2月城規會再審-有區議員憂交通-質疑會方非電競專家.html
+++ b/_posts/2023-01-11-INMEDIA-南華會申建電競館2月城規會再審-有區議員憂交通-質疑會方非電競專家.html
@@ -19,4 +19,6 @@ author: 獨媒報導
 <p><strong>顧國慧：麥花臣CGA電競館剛結業</strong></p>
 <p>灣仔區議員顧國慧向《獨媒》表示，會方新的修訂未能解答對區內交通負荷的憂慮。她指在加路連山道一帶除希慎及華懋的新商廈外，亦有新法院大樓，認為再增加電競館未必「搞得掂」。她又提到，旺角麥花臣CGA電競館將於月底結業，質疑興建電競館的必要。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/zN6074j7LQ" title="顧國慧"><img src="https://live.staticflickr.com/65535/52618992634_53bdb2eec9_b.jpg" width="1024" alt="顧國慧" /></a><br /><em>顧國慧</em></p>
+<p><strong>希慎：研行人連接 惟重申南華會應考慮及處理公眾的顧慮</strong></p>
+<p>希慎回覆《獨媒》表示，去年10月中收到南華會信件，提出以行人天橋方式連接加路連山道商業項目和南華會。希慎同月回覆南華會，認為建議可改善區內行人暢達度及連接性，將進一步研究該建議。不過希慎亦表示，在信中向南華會提及公眾對電競館項目的關注，希慎明白市民的顧慮，認為他們的關注應被考慮和處理。</p>
 </div></div></div>
