--- a/_posts/2023-01-11-PQ-打包-傳蘇貞昌內閣總辭.html
+++ b/_posts/2023-01-11-PQ-打包-傳蘇貞昌內閣總辭.html
@@ -44,7 +44,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m.jpg" alt="" class="wp-image-125193" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m-300x254.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m-768x651.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>民進黨代理主席陳其邁表示尊重總統職權。圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m.jpg" alt="" class="wp-image-125193" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m-300x254.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/2b7e11c5-20230111000037m-768x651.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>民進黨代理主席陳其邁表示尊重總統職權。圖／中央社</figcaption></figure></div>
 
 
 
@@ -56,4 +56,8 @@ author: 霍布斯潘
 
 
 
-<p>資料來源：民進黨立院黨團　國民黨立院黨團　民眾黨立院黨團　<a href="https://www.facebook.com/presidentialoffice.tw/posts/pfbid0JRGujKD574zY4hK9ot69iwCa8bNGX8uKAZsZ9ys6V7aKWVwg1fek3dMLCFGNSA9ul" target="_blank" rel="noopener">總統府發言人</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230111-1/">「打包」？傳蘇貞昌內閣總辭</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>民進黨議員張之豪則認為「蘇內閣應該調整，但不應該總辭。」</p>
+
+
+
+<p>資料來源：民進黨立院黨團　國民黨立院黨團　民眾黨立院黨團　<a href="https://www.facebook.com/presidentialoffice.tw/posts/pfbid0JRGujKD574zY4hK9ot69iwCa8bNGX8uKAZsZ9ys6V7aKWVwg1fek3dMLCFGNSA9ul" target="_blank" rel="noopener">總統府發言人</a>　<a href="https://www.facebook.com/photo/?fbid=687062436215949&amp;set=a.497059955216199" target="_blank" rel="noopener">張之豪臉書</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230111-1/">「打包」？傳蘇貞昌內閣總辭</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
