--- a/_posts/2023-01-11-INMEDIA-立場案-鍾沛權稱-蘋果-停刊後續做因-唔捨得-唔甘心-由始至終我哋都冇做錯.html
+++ b/_posts/2023-01-11-INMEDIA-立場案-鍾沛權稱-蘋果-停刊後續做因-唔捨得-唔甘心-由始至終我哋都冇做錯.html
@@ -9,35 +9,32 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/18_5.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《立場新聞》母公司、前總編輯鍾沛權及前署任總編輯林紹桐被控「串謀發布煽動刊物」罪，今（11日）於區域法院踏入審訊第18天。鍾沛權今繼續作供，他表示《國安法》後仍盡量維持編採方針，認為如實報導受訪者港獨等主張屬言論自由所容許，但承認因新法而不刊登鼓吹港獨文章。</p>
-<p>他續指，《蘋果》停刊後感到《國安法》威脅變得「好埋身」，遂決定下架文章及遺散同事以保護同事和公司。被問及太太陳沛敏被捕、《蘋果》停刊，為何仍續辦《立場》，他一度哽咽稱「唔捨得、唔甘心」，又指「其實我同同事都覺得，由始至終我哋都冇乜嘢係做錯過」。他其後因照顧太太選擇辭任總編，並找來林紹桐頂替，鍾說到林時眼眶泛紅，形容他「好好」，「佢願意冒呢個險」，但對最後致林成為同案被告感「唔好意思」：「我好似最後冇辦法保護晒所有同事。」</p>
+<p>他續指，妻子陳沛敏被捕、《蘋果》停刊後感到《國安法》威脅「好埋身」，遂決定下架文章及遺散同事以保護同事和公司，又承認曾考慮停運。但他仍續辦《立場》，他哽咽稱「唔捨得、唔甘心」，又指「其實我同同事都覺得，由始至終我哋都冇乜嘢係做錯過」。他其後因照顧妻子，自感無法履行職責而辭任總編，並找來林紹桐頂替，鍾說到林時再度哽咽，形容他「好好」、「佢願意冒呢個險」，但對最後致林成為同案被告感「唔好意思」：「我好似最後冇辦法保護晒所有同事。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/s3ig9PW839" title="DSCF6952"><img src="https://live.staticflickr.com/65535/52578646382_f4f4eeeaa0_c.jpg" width="800" alt="DSCF6952" /></a><br /><em>鍾沛權（左）、林紹桐（右）</em></p>
 <p><strong>稱《國安法》通過後編採方針不變 惟下架倡港獨文章</strong></p>
 <p>鍾沛權昨稱，香港回歸後的言論自由環境，直至《國安法》前均與回歸前相若，亦受《人權法》和《基本法》保障。余若薇問他《國安法》通過後，《立場》有否改變做法，他表示就報導而言，「我哋就冇乜大改變」，因仍認為如實報導反映不同主張，「係新聞自由、言論自由嘅一部分。」</p>
 <p>但他坦言，《國安法》條文有明確規範，故就博客或讀者投稿的評論文章，「如果提倡香港獨立或其他領土分離主義，我哋都唔會刊登。」但他補充，仍想「盡量維持之前嘅編採方針」，故只要不觸及「紅線」，即使有文章猛烈批評權力機關，甚至要求修改憲法，只要不會觸發即時暴力的風險，仍認為屬言論自由所容許可刊出，又指《國安法》亦表明不會損害香港言論自由。 </p>
 <p><strong>《國安法》後續報港獨主張 稱磨平尖銳觀點「反而係斷章取義」</strong></p>
-<p>本案涉多篇政治人物專訪，當中有人提倡港獨。余若薇問《國安法》後是否仍可報導港獨主張，鍾稱「我哋都會盡量報導」，因政治人物備受關注，應讓公眾知道其真實主張：「我唔可能去篩選或者幫佢磨平佢某啲比較尖銳嘅觀點，如果係咁我反而係斷章取義，唔能如實反映一個被訪者的政治主張」，甚或令讀者誤以為此人「幾溫和」。他又舉例，「光復香港，時代革命」被裁定含港獨含意，但如在新聞報導現場出現該口號的橫額仍應報導。</p>
-<p>他續解釋，「我唔想同事有啲不必要同埋好難把握嘅紅線」，直言《國安法》下紅線模糊，「你一覺得有啲嘢唔出得，就發現左支右絀，因為好多嘢都判斷唔到」，形容操作困難度很大、引致不必要自我審查，亦令報導不全面，「其實變成等於唔真實、唔係真相全部」，故想盡量避免。余若薇問及，那不去進行相關人物專訪是否能避免，鍾重申「傳媒有責任去紀錄同報導」。</p>
-<p><strong>《蘋果》停刊後感威脅「埋身」 遂下架文章及遣散同事</strong></p>
-<p>余若薇後問及《蘋果日報》案的詳情，鍾沛權憶述太太陳沛敏前年6月被捕時，一度雙眼通紅並三度說「唔好意思」，未能繼續作供，需在早休過後才繼續。他表示，前年6月17日《蘋果》多名高層被捕、資金被凍結，身為副社長的太太陳沛敏亦被捕被控，《蘋果》並於6月24日停刊。鍾指，當時《國安法》生效近一年，傳媒一直「步步為營」，而《蘋果》一案是九七回歸以來首次有傳媒機構及編採人員被捕被控，「仲要係一條刑罰非常重嘅新條例」，形容威脅變得「很具體」、「好埋身」，遂想辦法「嘗試保護同事、保護公司」。</p>
+<p>本案涉多篇政治人物專訪，當中有人提倡港獨。余若薇問《國安法》後是否仍可報導港獨主張，鍾稱「我哋都會盡量報導」，因政治人物備受關注，應讓公眾知道其真實主張：「我唔可能去篩選或者幫佢磨平佢某啲比較尖銳嘅觀點，如果係咁我反而係斷章取義」，甚或令讀者誤以為此人「幾溫和」。他又舉例，「光復香港，時代革命」被裁定含港獨含意，但如在新聞報導現場出現該口號的橫額仍應報導。</p>
+<p>他續解釋，「我唔想同事有啲不必要同埋好難把握嘅紅線」，直言《國安法》下紅線模糊，「你一覺得有啲嘢唔出得，就發現左支右絀，因為好多嘢都判斷唔到」，形容操作困難度很大、引致不必要自我審查，亦令報導不全面，故想盡量避免。余若薇問及，那是否可不進行相關人物專訪，鍾重申「傳媒有責任去紀錄同報導」。</p>
+<p><strong>《蘋果》停刊後感威脅「埋身」 遂下架文章及遣散同事 憶妻被捕時哽咽</strong></p>
+<p>余若薇後問及《蘋果日報》案的詳情，鍾沛權憶述身為副社長的妻子陳沛敏前年6月被捕時，一度雙眼通紅並哽咽，三度說「唔好意思」，未能繼續作供，需在早休過後才繼續。他其後表示，前年6月17日，包括妻子的多名《蘋果》高層被捕、資金被凍結，《蘋果》於6月24日停刊。當時《國安法》生效近一年，傳媒一直「步步為營」，《蘋果》案是九七回歸以來首次有傳媒機構及編採人員被捕被控，「仲要係一條刑罰非常重嘅新條例」，他形容威脅變得「很具體」、「好埋身」，遂想辦法「嘗試保護同事、保護公司」。</p>
 <p>《立場》其後於6月27日發布公告，稱將所有5月前刊出的評論文章下架，停收捐款及遣散員工並重新簽約等。鍾沛權解釋，下架決定艱難，亦不代表認為內容有問題，但由於當時判斷不到什麼內容不違法，為安全起見「唯有一刀切全部下架先」，若博客望繼續刊登，他們再重新發表，例如哲學相關文章便全部重新上架。</p>
-<p>而由於《蘋果》被凍結資金，他們不希望一旦被捕會浪費贊助人金錢，故停收捐款；亦望將同事經歷公司「非正式死亡」時損失減至最低，故盡快為工作逾半年的同事結算年資和付遣散費，比法例要求兩年的年資為寬鬆，「我希望盡量可以善待同事」；亦由「月尾出糧」改至「月頭出糧」，「基本上唔想拖欠同事薪金。」但他本人則沒有收遣散費。</p>
+<p>而由於《蘋果》被凍結資金，他們不希望一旦《立場》「非正式死亡」時會浪費贊助人金錢，故停收捐款；亦望將同事損失減至最低，故由「月尾出糧」改至「月頭出糧」，並盡快為工作逾半年的同事結算年資和付遣散費，比法例要求兩年的年資為寬鬆，「我希望盡量可以善待同事」，「基本上唔想拖欠同事薪金。」但他本人則沒有收遣散費。</p>
 <p><strong>《蘋果》停刊後續做因「唔捨得、唔甘心」：由始至終我哋都冇做錯</strong></p>
 <p>余若薇問及：「你太太被捕被告，蘋果又停刊，點解《立場》要繼續呢？你自己又冇遣散費，又留任做總編輯呢？」鍾表示「個工作唔止我覺得啦，其實成個團隊同事都覺得我哋工作有意義、有意思，應該做落去」，加上當時不少傳媒機構遭遇變化，「有啲好好嘅行家離開咗原來個工作崗位」，由《立場》聘用，形容團隊「越做越好」，「好多化學作用或者火花可以碰撞到出來」，無論報導的質和量也有進步。</p>
 <p>他續指，「最簡單講法就係唔捨得啦，唔捨得、唔甘心。其實我同同事都覺得，由始至終我哋都冇乜嘢係做錯過，冇覺得自己有做過任何嘢係會被、或應該會被法律追究或針對」，甚至如今回想：「會唔會有啲一廂情願呢？但當時確實係咁諗，所以就繼續。」</p>
-<p>余若薇問他：「點解你覺得冇做錯呢？」鍾引創刊辭稱《立場》不會有「隱藏議程」，直言每篇報導均沒有隱藏目的，「我哋好純粹就係見到有重要性、關乎公眾利益、有公共性嘅事件或人物，我哋就想去報導。」他表示，認為做法對社會有益，甚至「我仍然堅持係對國家有利」，因充分的言論自由、準確的事實記錄，「將佢擺出嚟公共領域，大家自由討論，呢個過程本身至可以令社會進步」，而他們在《國安法》生效前後也沒有變過，「覺得冇錯所以就一直做落去。」</p>
-<p><strong>稱因太太還柙 家人不想冒險、無法履行職責遂辭職</strong></p>
-<p>余若薇續問，既然不捨得，又為何於2021年10月尾辭任總編緝。鍾解釋「純粹係家人嘅關係」，因太太陳沛敏於7月22日再被捕、不獲保釋，面對的刑期難以估計，還柙時期亦可能很長，故當時每天到大欖女懲教所探訪她，亦「開始唔係好能夠履行我原來工作嘅角色」，不能長時間身處辦公室，亦難以事前審閱文章。</p>
-<p>鍾表示，「我覺得唔理想的，我冇辦法發揮到我呢個崗位應該盡的職責」。加上包括陳沛敏在內，「我嘅其他家人都唔想我再冒險落去」，雖然他判斷「辭職唔辭職對我嚟緊可能遭遇被針對，我覺得分別唔係好大」，但亦打算辭職，令家人安心。</p>
+<p>余若薇問為何覺得沒有做錯，鍾引創刊辭稱《立場》不會有「隱藏議程」，直言每篇報導均沒有隱藏目的，「我哋好純粹就係見到有重要性、關乎公眾利益、有公共性嘅事件或人物，我哋就想去報導。」他表示，認為做法對社會有益，甚至「係對國家有利」，因充分的言論自由、準確的事實記錄，「將佢擺出嚟公共領域，大家自由討論，呢個過程本身至可以令社會進步」，而他們在《國安法》生效前後也沒有變過，「覺得冇錯所以就一直做落去。」</p>
+<p><strong>稱因妻子還柙 無法履行職責遂辭職 認曾考慮結束《立場》</strong></p>
+<p>余若薇續問，既然不捨得，又為何於2021年10月尾辭任總編緝。鍾解釋「純粹係家人嘅關係」，因妻子7月被捕後不獲保釋，面對的刑期難以估計，他當時每天到大欖女懲教所探訪，「開始唔係好能夠履行我原來工作嘅角色」，不能長時間身處辦公室，亦難以事前審閱文章。</p>
+<p>鍾表示，「我覺得唔理想的，我冇辦法發揮到我呢個崗位應該盡的職責」，並承認於9月下旬、10月時實「認真諗過」是否結束《立場》，「但係⋯⋯唔捨得、唔甘心」，他再哽咽，並指「有班好好嘅同事做緊嘢，結束平台非常可惜」。</p>
 <p><strong>稱對林紹桐「唔好意思」：我好似最後冇辦法保護晒所有同事</strong></p>
-<p>鍾續指，至9月下旬、10月時實「認真諗過」是否結束《立場》，「但係⋯⋯唔捨得、唔甘心」，他哽咽，並指「有班好好嘅同事做緊嘢，結束平台非常可惜」，但由於傳媒一定要有總編輯位置，故需找人頂替，「最難抉擇係搵咩人」。此時他停下來，一度眼眶泛紅說「唔好意思」，余若薇着他「飲啖水」，他邊喝水邊說：「我有位好好嘅同事林紹桐，佢願意冒呢個險，咁對我嚟講我係唔好意思嘅，因為我唔想我啲同事冒險」，但在他要辭職和不希望《立場》結束下，「要做一個選擇。」</p>
+<p>鍾續指，當時包括陳沛敏在內，「我嘅其他家人都唔想我再冒險落去」，雖然他判斷「辭職唔辭職對我嚟緊可能遭遇被針對，我覺得分別唔係好大」，但終打算辭職令家人安心。而由於傳媒機構一定要有總編輯，故需找人頂替其職位，「最難抉擇係搵咩人」。此時他停下來，哽咽說「唔好意思」，余若薇着他「飲啖水」，他喝水後說：「我有位好好嘅同事林紹桐，佢願意冒呢個險，咁對我嚟講我係唔好意思嘅，因為我唔想我啲同事冒險」，但在他要辭職和不希望《立場》結束下，「要做一個選擇。」</p>
 <p>余若薇問，他對林紹桐感「唔好意思」的原因，是否因「你辭職令佢做總編輯，令佢要同你做同案被告？」，鍾答「係」，直言：「去到我被捕嗰日，我有啲意外同唔應該，就係點解嗰啲文章明明唔應該係佢負責，點解要拘捕埋佢呢，呢個對我嚟講係好大嘅不安寧，我好似最後冇辦法保護晒所有同事。」</p>
 <p><strong>辭職後「職業病」開群組發指示 但對最後兩文章誰審批不知情</strong></p>
-<p>庭上早前指，鍾沛權離職後，開設與林紹桐和另一同事的 WhatsApp 群組，並就編採事宜發指示。鍾笑着解釋，「我只可以講，職業病」，直言雖然辭任，但他仍每日看《立場》和關心其內容和發展，「有時見到錯漏又忍唔住想提醒，見到有啲文章幾好又想提醒，見到其他行家做咗某啲故仔點解我哋未有，又想提醒」，故成立群組「持續喺裏面好囉嗦咁畀啲意見」。</p>
-<p>余若薇問他是否「假辭職」。鍾表示他對涉案15篇文章的責任沒有異議：「我承認的，亦覺得冇乜嘢需要隱瞞，作為總編輯呢啲角色責任係一定的」，故沒有在錄影會面保持緘默。</p>
-<p>但他指，「去到一啲唔係事實嘅嘢，我冇得夾硬認」，直言雖一直在 WhatsApp 群組表達意見，但確實不知道離任後兩篇涉案文章由誰審批，也是看到保安局局長鄧炳強批評後，才瀏覽涉案的中大報導全文，及在錄影會面才閱讀鄒幸彤報導全文。他又提及，當時會面後有另一警員指「你都認得15篇，點解唔認埋另外嗰兩篇呢？」，但他說「唔係事實冇得認」。</p>
-<p><strong>稱傳媒報導真誠相信值得發表內容：呢種意圖係咪叫做煽動，我唔覺得係</strong></p>
-<p>此外，控方早前呈上《立場》刊物《立誌》，並要求讀出序言內容。鍾今解釋《立誌》是《立場》送給會員的回饋。余若薇問，是否用來煽動會員和香港人，鍾答「一定唔係」，並笑謂「我其實一路唔係好理解煽動呢個字眼所指」，表示作為傳媒，「所有內容我哋寫得出嚟出版，都係真誠相信嗰啲內容，真誠相信嗰啲內容係值得發表。咁呢種意圖係咪叫做煽動，我唔覺得係囉」，並指特刊另一目的是重申「以筆桿書寫真相，以真相追求公義」的宗旨。</p>
-<p>余若薇續問：「呢個真相對你或《立場》有幾重要？」，鍾說：「唔止對我同《立場》，對所有傳媒同新聞工作者都係最基本」，直言雖對同一真相的演繹可因政治背景和意識形態而有千差萬別，但起碼基本事實不可以搞錯，例如他們從沒有稱8.31太子站「死咗人」，亦曾做相關調查報導，望盡量接近真相。他們報導爭議事件時，亦盡量報導不同的意見，確保「持平」。</p>
+<p>控方早前指，鍾沛權離職後於12月15日開設兩個名為「Stand」的群組，就編採事宜發指示，一個包括鍾沛權、林紹桐和梁俊勤，另一個只有鍾和林。鍾解釋，二人群組是「開錯咗」，並笑言開設原因是「職業病」，「有時見到錯漏又忍唔住想提醒，見到有啲文章幾好又想提醒，見到其他行家做咗某啲故仔點解我哋未有，又想提醒」，故成立群組「持續喺裏面好囉嗦咁畀啲意見」。</p>
+<p>余若薇表示，控方似乎指他「辭職係假嘅」，鍾表示他對涉案15篇文章的責任沒有異議：「我承認的，亦覺得冇乜嘢需要隱瞞，作為總編輯呢啲角色責任係一定的」，故沒有在錄影會面保持緘默。</p>
+<p>但他指，「去到一啲唔係事實嘅嘢，我冇得夾硬認」，直言雖一直在 WhatsApp 群組表達意見，但確實不知道離任後兩篇涉案文章由誰審批，也是看到保安局局長鄧炳強批評後，才瀏覽涉案的中大報導全文，及在錄影會面才閱讀鄒幸彤報導全文。他又提及，當時會面後有另一警員指「你都認得15篇，點解唔認埋另外嗰兩篇呢？」，但他說「唔係事實冇得認」，笑言「其實可能真係唔應該繼續向同事畀一啲意見，但唔代表我有參與審批。」</p>
 <p>案件下午續審。</p>
 <p>被告依次為 Best Pencil (Hong Kong) Limited、《立場》前總編輯鍾沛權（53歲）及前署任總編輯林紹桐（35歲），他們被控一項串謀發布及/或複製煽動刊物罪，指他們於2020年7月7日至2021年12月29日在香港，一同串謀和與其他人串謀發布及/或複製煽動刊物，即具以下意圖的刊物：</p>
 <blockquote><p>a) 引起憎恨或藐視中央或香港特別行政區政府或激起對其離叛<br />
