--- a/_posts/2023-01-11-INITIUM-爱沙尼亚的中国-数字居民-通往新身份之路.html
+++ b/_posts/2023-01-11-INITIUM-爱沙尼亚的中国-数字居民-通往新身份之路.html
@@ -92,7 +92,7 @@ author: 特约撰稿人周悠游
 <p>数字身份证是经过政府验证的个人身份认证，这对商家也很有用。在爱沙尼亚，你不需要银行卡、各种书店和电影院的会员卡、或者公共交通卡，这些卡都可以被数字身份证代替——只要你进行授权，商家可以通过数字身份证接入x-road，验证刷卡人的自然人身份。</p>
 <p>对爱沙尼亚来说，技术治国有历史可循，是顺理成章的事情。在前苏联时期，为了杜绝各国之间的竞争，斯大林为东欧各国分配了各自的生产领域，无线电子工业和计算机产业，被分配给了爱沙尼亚。这为爱沙尼亚的塔图大学带来了苏联时期最一流的计算机科学家和充足的研究经费。爱沙尼亚的一所乡村学校在1965年成为了全苏联第一个配备计算机的学校，爱沙尼亚塔图大学的学生在八十年代创造出了后来被广泛用于苏联学校的 Juku电脑。八十年代塔图大学毕业的校友们，如今成为了这个国家最重要的企业家和投资人，他们懂得技术、发展技术，帮助独立后的政府进行数字转型。三十年来，爱沙尼亚还清了大部分国债，加入欧盟，如今是前苏联解体后独立的15个国家中，经济发展最快速、人均GDP最高的国家。爱沙尼亚曾培育了多个科技独角兽，其中包括后来卖给微软的Skype以及在伦敦交易所上市的Wise。2021年，仅Bolt就为爱沙尼亚带来了六亿欧元的投资。</p>
 <p>“数字居民”项目给爱沙尼亚政府带来的税收回报高，投入却很低，是因为数字居民所需要的技术支持——从数据储存到数字化的政府服务——已是爱沙尼亚社会的一部分，“数字居民”项目只是把这些服务开放给世界各地的人。</p>
-<p>“我们没有石油或者黄金，我们不像中国，有许多自然资源。我们通过数字居民项目让大家看到爱沙尼亚的这些优势。”Vaga和我说，“如果马斯克 (Elon Musk) 要考虑去哪里创建他的下一个公司，我们希望他选择爱沙尼亚。”当时，马斯克还没有收购推特。</p>
+<p>“我们没有石油或者黄金，我们通过数字居民项目让大家看到爱沙尼亚的这些优势。”Vaga和我说，“如果马斯克 (Elon Musk) 要考虑去哪里创建他的下一个公司，我们希望他选择爱沙尼亚。”当时，马斯克还没有收购推特。</p>
 <h2>当理想遭遇现实</h2>
 <p>四年前，还在上海读研究生的张弢听闻了“数字居民”的项目，决定尝鲜。申请表上要求填写申请理由，他写的是：“非常热衷于区块链行业，希望去爱沙尼亚进行下一步发展。”申请通过了。2019年1月，张弢第一次来到北京，趁此机会玩了一圈，在颐和园滑冰，去爱沙尼亚在北京的大使馆领身份卡。“后来我因为工作又去过北京十几次，都没有那次玩得那么开心。”他回忆。</p>
 <p>拿到身份卡之后，张弢马不停蹄地开了爱沙尼亚公司，在当地银行远程开户，很兴奋，“因为自己有一番事业要做起来了。”但这个身份和公司并没有给他带来预期中的好处。他发现，仅仅凭借一张没有照片的数字芯片卡，连在海外的数字货币交易所开户也无法做到；而爱沙尼亚在2020年后加强了对数字货币公司的准入要求，数字货币交易牌照不再容易获得，张弢在爱沙尼亚注册的公司没有派上用处。</p>
