Update VOCUS 2023-01-13 patch

--- a/_posts/2023-01-13-VOCUS-放風是必要的-聲飲啤酒-x-泰太太想說.html
+++ b/_posts/2023-01-13-VOCUS-放風是必要的-聲飲啤酒-x-泰太太想說.html
@@ -9,7 +9,6 @@ author: 泰太
 ---
 
 <blockquote class="draft-block draft--blockquote">「吼，乾脆我明天衝去清邁找朋友，以錄podcast為名，來行放鬆之實！」</blockquote>
-<h2 class="draft-block draft--h2" name="header-beu1u"></h2>
 <h2 class="draft-block draft--h2" name="header-oh26">有時幸福就是來得這樣快</h2>
 <div class="draft-block draft--p left">說出這句略帶賭氣的玩笑話，其實是真的好想去放風一下，因為近期老公出差頻繁，我獨自一人育兒的時間大大增多，多到好想要大口呼吸自由的空氣。</div>
 <div class="draft-block draft--p left">結果，隔天竟然就收到一封陌生訊息，是來自【聲飲啤酒】的Claire，她說要來泰國玩順便來找我錄一集節目！</div>
@@ -21,9 +20,7 @@ author: 泰太
 <h2 class="draft-block draft--h2" name="header-97lb0">歡迎來清萊找我玩</h2>
 <div class="draft-block draft--p left">我們一起窩在背包客房的床位上錄音，看似克難但很自在啊！做Podcast兩年多來，這也是我第一次與人面對面的現場錄音，感覺很棒，有些事果然是遠距無法取代的。</div>
 <div class="draft-block draft--p left">這是我自己也很喜歡的一集，而片頭的航空廣播是<a href="https://open.spotify.com/episode/4vRSpbMbMUgGC9FbTSoLbE?si=f270adb645744572" target="_blank" class="draft--a">ep.36</a>的，因為Claire說很喜歡所以想把這一段放在她的節目中。</div>
-<div><iframe allowfullscreen src="https://open.spotify.com/episode/79xc1NTutfaPrzFpUDNSET?si=8cc2a50c1ea844b1&amp;fbclid=IwAR34wTWwb3IpsSyF2mgeHPSIR5TcY8R-i-rYrg33PKqD1BLXuduzGxM26Fw&amp;nd=1"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/episode/79xc1NTutfaPrzFpUDNSET?si=8cc2a50c1ea844b1&amp;fbclid=IwAR34wTWwb3IpsSyF2mgeHPSIR5TcY8R-i-rYrg33PKqD1BLXuduzGxM26Fw&amp;nd=1"></iframe></div>
 <div class="draft-block draft--p left">最後，誠摯歡迎大家有空到清萊找我玩，從陌生網友到真實朋友，其實可以很快也很輕鬆呢！</div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://www.baanmaikradan.com/">Baan Mai Kradan Hostel Chiang Rai</a></h3><span>Baan Mai Kradan &amp;#039;Lifestyle&amp;#039; Hostel is originally an old Thai house built in 1964 or over 50 years old where we completely renovate the old wooden house and resurrect it on 3 December 2017. Today the lifestyle hostel provides its residents with premium co-living accommodation - right at th...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimage.makewebeasy.net%2Fmakeweb%2F0%2F6fAKJfmyF%2FDefaultData%2FBaan_Mai_Kradan_Logo_03.png&amp;width=550&amp;sign=WEI-2H1EEZu6yj4C03BjTV33d47NyyezGl8CSR7LzKc"></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; ">附上高CP值住宿，一晚只要泰銖200多，還有附免費早餐，黑咖啡、生菜沙拉、吐司、水果，樣樣有。重點是整體空間寬敞廣大，泰國的住宿都很敢保留大量的空間，實在好喜歡。</span></div>
-<div class="draft-block draft--p left"></div>
