--- a/_posts/2023-01-13-INMEDIA-夏寶龍點名提醒履行職責-李家超速回-全力推進盡早就廿三條立法.html
+++ b/_posts/2023-01-13-INMEDIA-夏寶龍點名提醒履行職責-李家超速回-全力推進盡早就廿三條立法.html
@@ -18,4 +18,7 @@ author: 獨媒報導
 <p><strong>處理好國安問題 「香港才有條件對世界更開放」</strong></p>
 <p>他最後指保障國家安全是開放發展的前題，香港作為「國際大都會」，要處理好保障國家安全問題，要有國家安全屏障，「香港才有信心和條件對全世界更加開放」。</p>
 <p>在致辭結束後不久，李家超隨即在Facebook及微博貼文指，自己及多位官員出席研討會聆聽夏寶龍發言。他指國安委日前已經開會，全力積極履行國安委的職責；亦指特區政府會「全力推進盡早就基本法23條立法的工作」。有份出席會議的全國人大常委譚耀宗向記者表示，相信廿三條立法會工可以在今年內完成。</p>
+<p>民建聯：研討會令大家更清楚紅線禁區</p>
+<p>夏寶龍在研討會發言後，三名與會的民建聯立法會議員見記者。黃英豪表示，國安法實施兩年半來或有不同解讀，惟經現有案例及人大釋法後，相信各界包括行政及立法機關對國安法的理解會越加清楚，「大家就知道邊一啲係紅線、邊一啲係禁區」。黃指會議亦清晰說明，行政機關透過以行政長官為主席的國家安全委員會，在落實國安方面肩負「第一責任」。</p>
+<p>周浩鼎則指，會議釐清了不只司法機關擁有國安法的管轄權，而是本港的行政、立法及司法機關均需共同承擔維護國安的責任。他指會議亦強調，普通法的運作不應妨礙國安法的落實。</p>
 </div></div></div>
