--- a/_posts/2023-01-13-PQ-日美外交國防二加二-明指中國是全世界的最大戰略挑戰.html
+++ b/_posts/2023-01-13-PQ-日美外交國防二加二-明指中國是全世界的最大戰略挑戰.html
@@ -20,7 +20,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9.jpeg" alt="" class="wp-image-125275" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9.jpeg 1009w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9-300x214.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9-768x548.jpeg 768w" sizes="(max-width: 661px) 100vw, 661px" /><figcaption>由左至右為日本防衛大臣濱田靖一、外務大臣林芳正；美國國務卿布林肯、國防部長奧斯汀。<br>（圖／日本外務省）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9.jpeg" alt="" class="wp-image-125275" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9.jpeg 1009w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9-300x214.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/564e2370-6a30652a-c46a-4467-8c8a-5a44fd6148c9-768x548.jpeg 768w" sizes="(max-width: 661px) 100vw, 661px" /><figcaption>由左至右為日本防衛大臣濱田靖一、外務大臣林芳正；美國國務卿布林肯、國防部長奧斯汀。<br>（圖／日本外務省）</figcaption></figure></div>
 
 
 
