Update VOCUS 2023-01-14 patch

--- a/_posts/2023-01-13-VOCUS-孤獨搖滾-社恐女孩也想玩團.html
+++ b/_posts/2023-01-13-VOCUS-孤獨搖滾-社恐女孩也想玩團.html
@@ -54,4 +54,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但是《孤獨搖滾！》有一些問題，雖然知道去趣味但是女主角個性可能並非所有觀眾都買單，並且在反覆出現女主角那些社恐想像，有時候笑點會讓人疲乏，重複的梗用太多次，也是這作品一個小問題，雖然多數我覺得動畫的節奏和女主角個性交織性，兩者運用得很不錯，且不管是日常回、演出回，也都很有意思。</div>
 <div class="draft-block draft--p left">主角的社恐因為周遭夥伴跟大家溫柔的支持，而在《孤獨搖滾！》展現出一個有笑有淚的喜劇，但現實中因為社群媒體的發達，我們可能在不了解他們的狀況下只憑感覺、自我認知就放肆任意攻擊對方，還好作品裡沒有出現這樣的橋段。</div>
 <div class="draft-block draft--p left">在乎他人想法、害怕不被他人接受或誤會是現代人的困擾，但就跟主角一樣有時候我們只要問心無愧的展現出來就好，在乎你所在乎的。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/nomJbjuQXAY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/nomJbjuQXAY"></iframe></div>
