--- a/_posts/2023-01-14-INMEDIA-團體指-拗直-性小眾致八成人想自殺-倡立法禁性向改變課程.html
+++ b/_posts/2023-01-14-INMEDIA-團體指-拗直-性小眾致八成人想自殺-倡立法禁性向改變課程.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>曾嘗試「拗直」自己的同志憶述當年試盡禁慾、讀經各種方法，卻令身心臨近崩潰。真光社強調，性向改變課程無用而有害，促請政府立法禁止。</p>
 <p><strong>調查指兩成性小眾曾試「拗直」 無人認為有效</strong></p>
 <p>性小眾關注團體「真光社」聯同教育大學特殊教育與輔導學系副教授陳俊豪，在2020年8月至2021年3月期間以網上問卷訪問219位性小眾，另亦邀請11位受訪者進行訪談。調查發現，兩成受訪者曾試改性向，即每5名性小眾中有1人曾嘗試「拗直」自己，當中逾七成人有宗教背景。</p>
-<p>研究亦顯示，約六成人屬自發拗直，四成則受他人驅使，提出「拗直」建議者則以家人、宗教領䄂、信仰群體及輔導員為主，自發及他發的受訪者均有約一半人以宗教方法拗直。</p>
+<p>研究亦顯示，約六成人屬自發拗直，四成則受他人驅使，提出「拗直」建議者則以家人、宗教領袖、信仰群體及輔導員為主，自發及他發的受訪者均有約一半人以宗教方法拗直。</p>
 <p>不過，不論是自發或他發，五成半人認為「拗直」完全無效，無一個受訪者認為有效；另有五成半人坦承試改性向只是為了滿足他人期望；四成人更因「拗直」而達致臨床抑鬱的水平，逾八成人萌生自殺念頭。 </p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8P1BimAH5o" title="DSC_2352"><img src="https://live.staticflickr.com/65535/52626675473_f9fc258f63_b.jpg" alt="DSC_2352" /></a></p>
 <p><strong>曾禁慾一年圖「拗直」自己 身心瀕崩潰</strong></p>
