--- a/_posts/2023-01-15-INMEDIA-高鐵復運-港鐵-零星旅客核酸報告有問題須折返內地.html
+++ b/_posts/2023-01-15-INMEDIA-高鐵復運-港鐵-零星旅客核酸報告有問題須折返內地.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p><strong>首日售出4千南下車票、3千北上車票</strong></p>
 <p>張志強今早見記者時指，10時前已有9班列車北上、7班列車南下，合共1,400名乘客，是日售出約4,000張南下車票及3,000張北上車票。他提到，乘客臨近農曆新年均踴躍購票，將與港府及內地積極溝通，望能逐步增加車票及班次。</p>
 <p>張又透露，有零星從內地抵港的旅客因核酸報告有問題而須折返，但未交代具體數字。他提醒出境市民，須符合48小時內核酸檢測及內地健康申報的要求。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/dE3vs2m1xu" title="港鐵公司過境鐵路總管張志強"><img src="https://live.staticflickr.com/65535/52628154705_fdc5a65c1c_z.jpg" alt="港鐵公司過境鐵路總管張志強" /></a><br /><em>鐵公司過境鐵路總管張志強</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/dE3vs2m1xu" title="港鐵公司過境鐵路總管張志強"><img src="https://live.staticflickr.com/65535/52628154705_fdc5a65c1c_z.jpg" alt="港鐵公司過境鐵路總管張志強" /></a><br /><em>港鐵公司過境鐵路總管張志強</em></p>
 <p><strong>林世雄：往廣洲車票供應較緊張</strong></p>
 <p>今早首班從深圳北開往西九龍站的高鐵在7時42分抵港，文體旅局局長楊潤雄及運物局局局長林世雄在抵境大堂迎賓。二人笑容燦爛，為入境客送上福袋。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/GZ04rcn04e" title="無標題"><img src="https://live.staticflickr.com/65535/52627865224_aaac2452cd_z.jpg" alt="無標題" /></a></p>
