--- a/_posts/2023-01-14-PQ-還在希望與極權對話-烏大使籲-別傻了.html
+++ b/_posts/2023-01-14-PQ-還在希望與極權對話-烏大使籲-別傻了.html
@@ -8,56 +8,42 @@ tags: blog
 author: 李 運理
 ---
 
+</p>
 <p>烏國駐英大使普萊斯塔可（Vadym Prystaiko），透過媒體向西方世界呼籲不要期待能與蒲亭進行理性對話，因為這位領導人「並不講道理」。</p>
-
-
-
-<ul class="pqnote"><li>普萊斯塔可，是曾在俄烏戰爭爆發後，代表烏克蘭與俄羅斯進行和談的烏克蘭外交官。</li></ul>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko.jpeg" alt="" class="wp-image-125396" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko.jpeg 720w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko-225x300.jpeg 225w" sizes="(max-width: 411px) 100vw, 411px" /><figcaption>烏國駐英大使普萊斯塔可屢屢透過媒體聲援烏克蘭，並呼籲世界警戒蒲亭的危險。（圖／twitter@VPrystaiko）</figcaption></figure></div>
-
-
-
+</p>
+<ul class="pqnote">
+<li>普萊斯塔可，是曾在俄烏戰爭爆發後，代表烏克蘭與俄羅斯進行和談的烏克蘭外交官。</li>
+</ul>
+</p>
+<div class="wp-block-image">
+<figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko.jpeg" alt="" class="wp-image-125396" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko.jpeg 720w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/4344b6ef-@vprystaiko-225x300.jpeg 225w" sizes="(max-width: 411px) 100vw, 411px" /><figcaption>烏國駐英大使普萊斯塔可屢屢透過媒體聲援烏克蘭，並呼籲世界警戒蒲亭的危險。（圖／twitter@VPrystaiko）</figcaption></figure>
+</div>
 <h2>盟友別傻了！俄國假意停火　多國嘗試協調仍未果</h2>
-
-
-
+</p>
 <p>普萊斯塔可日前接受媒體聯訪時表示，許多人們還是期望能夠壓制蒲亭。在聯訪後數幾小時內，蒲亭便宣布因應聖誕節，將進行為期 36 小時的「停火」。然而，<strong>在「假停火」期間，俄軍不斷違反停火的承諾。</strong></p>
-
-
-
+</p>
 <p>普萊斯塔可更向媒體表示，<strong>許多國家似乎尚未意識到蒲亭是完全不合理的</strong>，目前沒有跡象透露出蒲亭有妥協的誠意。<strong>即便促成談判，也難以期待他會遵守任何協議。</strong>普萊斯塔以法國總統馬克宏為例，認為馬克宏對莫斯科之間的努力不停失敗，不僅如此，這些努力也不被烏國人民買單。</p>
-
-
-
-<ul class="pqnote"><li>當媒體詢問俄軍將來可能的動態時，大使認為，俄軍肯定會持續發動新的攻勢。並且他預估，俄國當局會再動員上百萬人上戰場。<br></li><li>除此之外，大使預期，在俄烏邊境長期動盪的國家，如白俄羅斯等國，也極有可能被捲入這場戰爭之中。</li></ul>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass.jpeg" alt="" class="wp-image-124886" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass.jpeg 1020w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass-300x191.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass-768x489.jpeg 768w" sizes="(max-width: 583px) 100vw, 583px" /><figcaption>因應東正教聖誕節，俄國總統蒲亭突宣布自 1 月6 日起中午起停火 36 小時，為了讓軍人及人民能在東正教聖誕節前去教堂慶祝。然事後烏國前線仍屢遭砲擊。<br>（圖／TASS）</figcaption></figure></div>
-
-
-
+</p>
+<ul class="pqnote">
+<li>當媒體詢問俄軍將來可能的動態時，大使認為，俄軍肯定會持續發動新的攻勢。並且他預估，俄國當局會再動員上百萬人上戰場。</li>
+<li>除此之外，大使預期，在俄烏邊境長期動盪的國家，如白俄羅斯等國，也極有可能被捲入這場戰爭之中。</li>
+</ul>
+</p>
+<div class="wp-block-image">
+<figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass.jpeg" alt="" class="wp-image-124886" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass.jpeg 1020w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass-300x191.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/5e06efe6-russias-preeminent-new-years-tree＠tass-768x489.jpeg 768w" sizes="(max-width: 583px) 100vw, 583px" /><figcaption>因應東正教聖誕節，俄國總統蒲亭突宣布自 1 月6 日起中午起停火 36 小時，為了讓軍人及人民能在東正教聖誕節前去教堂慶祝。然事後烏國前線仍屢遭砲擊。<br />（圖／TASS）</figcaption></figure>
+</div>
 <h2>環境將持續造出獨裁者　期待系統改變是更實際的期待　</h2>
-
-
-
+</p>
 <p>普雷斯塔認為，即使蒲亭的獨裁已經眾所皆知，然而，是這個系統培育出蒲亭這樣的極權領導者，可以恣意的更改民主制度、目無法紀。</p>
-
-
-
-<ul class="pqnote"><li>因此，即使蒲亭政權真的垮台，但取代他的極有可能是更危險的領導者，如俄羅斯內部極端的民族主義派，而非如大家預期的溫和民主派。</li></ul>
-
-
-
+</p>
+<ul class="pqnote">
+<li>因此，即使蒲亭政權真的垮台，但取代他的極有可能是更危險的領導者，如俄羅斯內部極端的民族主義派，而非如大家預期的溫和民主派。</li>
+</ul>
+</p>
 <p>面對眼前僵持不下的局勢，導致蒲亭身體罹患重病、被罷免的謠言甚囂塵上。然而，普雷斯塔可表示，這並非是一個實際的期待，也不建議人們將賭注押在時局變化。<strong>他認為，制度的改變可能是僵局的唯一解方。世界可以藉由俄國社會展現一個更美好的樣態，從而對俄羅斯內部的系統產生影響，由較易鬆動的區域開始推動改革。</strong></p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-1024x609.jpeg" alt="" class="wp-image-105719" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-1024x609.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-300x178.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512.jpeg 1280w" sizes="(max-width: 537px) 100vw, 537px" /><figcaption>許多俄羅斯人民因為反戰示威而被警方逮捕。（圖／OVD-Info）</figcaption></figure></div>
-
-
-
-<p>參考新聞連結：<br><br><a href="https://www.newsweek.com/west-must-stop-pretending-putin-reasonable-ukraine-ambassador-vadym-prystaiko-peace-talks-1772548" target="_blank" rel="noopener">2023/01/11　NewsWeek　West Must Stop Pretending Putin Is Reasonable: Ukraine Ambassador</a></p><p>The post <a href="https://pourquoi.tw/russian-20230115-2/">還在希望與極權對話？烏大使籲：別傻了！</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+</p>
+<div class="wp-block-image">
+<figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-1024x609.jpeg" alt="" class="wp-image-105719" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-1024x609.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512-300x178.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/2f465e47-俄國人民因為反戰而受警方逮捕ovoi-e1656170355512.jpeg 1280w" sizes="(max-width: 537px) 100vw, 537px" /><figcaption>許多俄羅斯人民因為反戰示威而被警方逮捕。（圖／OVD-Info）</figcaption></figure>
+</div>
+<p>參考新聞連結：</p>
+<p><a href="https://www.newsweek.com/west-must-stop-pretending-putin-reasonable-ukraine-ambassador-vadym-prystaiko-peace-talks-1772548" target="_blank" rel="noopener">2023/01/11　NewsWeek　West Must Stop Pretending Putin Is Reasonable: Ukraine Ambassador</a></p></p><p>The post <a href="https://pourquoi.tw/russian-20230115-2/">還在希望與極權對話？烏大使籲：別傻了！</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
