--- a/_posts/2023-01-17-PQ-首度輪替-陳奕齊卸任台灣基進黨主席-王興煥接棒捍衛本土政權.html
+++ b/_posts/2023-01-17-PQ-首度輪替-陳奕齊卸任台灣基進黨主席-王興煥接棒捍衛本土政權.html
@@ -8,11 +8,15 @@ tags: blog
 author: 林志鴻
 ---
 
-<p>台灣基進今（17）日舉行黨主席交接茶會，在台灣獨立建國聯盟主席陳南天和前屏東縣長潘孟安的監交下，創黨主席陳奕齊將象徵台灣基進的印信，以及代表建國志業的「MIT 台灣磚」，交棒給新任主席王興煥；並由黨籍台南市議員李宗霖與高雄市議員張博洋獻上捧花與台獨旗，代表權黨同志獻上感謝與祝福。陳奕齊致詞時表示，台灣需要一支政治隊伍與本土執政的民進黨，共構台灣的民主陸地，否則每兩年必面臨「定期亡國感」，這就是基進繼續為民主打拼的方式。</p>
+<p>台灣基進今（17）日舉行黨主席交接茶會，在台灣獨立建國聯盟主席陳南天的監交下，創黨主席陳奕齊將象徵台灣基進的印信，以及代表建國志業的「MIT 台灣磚」，交棒給新任主席王興煥；並由黨籍台南市議員李宗霖與高雄市議員張博洋獻上捧花與台獨旗，代表權黨同志獻上感謝與祝福。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1024x684.jpg" alt="" class="wp-image-125510" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1024x684.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-768x513.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1536x1026.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-2048x1368.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陳奕齊表示，台灣需要一支政治隊伍與本土執政的民進黨，共構台灣的民主陸地，否則每兩年必面臨「定期亡國感」，這就是基進繼續為民主打拼的方式／圖：台灣基進提供。</figcaption></figure></div>
+<p>陳奕齊致詞時表示，台灣需要一支政治隊伍與本土執政的民進黨，共構台灣的民主陸地，否則每兩年必面臨「定期亡國感」，這就是基進繼續為民主打拼的方式。</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1024x684.jpg" alt="" class="wp-image-125510" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1024x684.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-768x513.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-1536x1026.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/28d4c29a-dsc03555-2048x1368.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陳奕齊（左二）表示，台灣需要一支政治隊伍與本土執政的民進黨，共構台灣的民主陸地，否則每兩年必面臨「定期亡國感」，這就是基進繼續為民主打拼的方式／圖：台灣基進提供。</figcaption></figure></div>
 
 
 
@@ -28,7 +32,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1024x684.jpg" alt="" class="wp-image-125503" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1024x684.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-768x513.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1536x1026.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-2048x1368.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陳南天（右 2）表示，每次看到在電視上陳奕齊的慷慨激昂，想起自己過去二十幾年前的歲月，這麼多年陳奕齊為了基進的努力，一路辛苦，為陳奕齊感到不捨／圖：台灣基進提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1024x684.jpg" alt="" class="wp-image-125503" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1024x684.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-768x513.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-1536x1026.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c0aea6f5-dsc03207-2048x1368.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陳南天（中）表示，每次看到在電視上陳奕齊的慷慨激昂，想起自己過去二十幾年前的歲月，這麼多年陳奕齊為了基進的努力，一路辛苦，為陳奕齊感到不捨／圖：台灣基進提供。</figcaption></figure></div>
 
 
 
@@ -52,7 +56,7 @@ author: 林志鴻
 
 
 
-<h2><strong>▌</strong>王興煥接棒台灣基進黨主席、捍衛本土政權</h2>
+<h2><strong>▌</strong>王興煥：強化民主韌性　捍衛本土政權</h2>
 
 
 
@@ -60,7 +64,15 @@ author: 林志鴻
 
 
 
-<p>王興煥以戰友之稱向陳奕齊表達感謝。他說，陳奕齊提出側翼戰略以襄助本土執政，到建構本土雙引擎以促使台灣從民主轉型走向民主鞏固，陳奕齊始終以「我不是我的我」的廓然大公，一步一腳印帶領著台灣基進，奉獻給台灣人永遠的記憶所繫之處。<strong>陳奕齊決定將卸下擔任六年的黨務工作，將以台灣基進顧問的身分，擔負政治教育與政治組織的重責，與台灣基進的黨務系統「仝齊」分進合擊。</strong>而自己也以如履薄冰的慎重，接棒台灣基進黨主席一職，與全台台灣基進黨員上下強化民主韌性，捍衛本土政權。</p>
+<p>王興煥以戰友之稱向陳奕齊表達感謝。他說，陳奕齊提出側翼戰略以襄助本土執政，到建構本土雙引擎以促使台灣從民主轉型走向民主鞏固，陳奕齊始終以「我不是我的我」的廓然大公，一步一腳印帶領著台灣基進，奉獻給台灣人永遠的記憶所繫之處。</p>
+
+
+
+<p><strong>陳奕齊決定將卸下擔任六年的黨務工作，將以台灣基進顧問的身分，擔負政治教育與政治組織的重責，與台灣基進的黨務系統「仝齊」分進合擊。</strong></p>
+
+
+
+<p>自己也將以如履薄冰的慎重，接棒台灣基進黨主席一職，與全台台灣基進黨員上下<strong>強化民主韌性，捍衛本土政權</strong>。</p>
 
 
 
