--- a/_posts/2023-01-17-PQ-成立美中戰略競爭委員會後-美眾議院再通過法案禁向中國出口戰備儲油.html
+++ b/_posts/2023-01-17-PQ-成立美中戰略競爭委員會後-美眾議院再通過法案禁向中國出口戰備儲油.html
@@ -12,7 +12,7 @@ author: 艾格姆
 
 
 
-<p class="pqnote">眾議院以 365 票對 65 票贊成成立美中戰略競爭特別委員會，將調查研究中國問題並提出政策建議。委員會將由共和黨眾議員蓋拉格（Mike Gallagher）擔任主席。小組將在年底前向國會提出政策建議。65 張反對票都來自民主黨人，其中一些反對聲音表示擔心共和黨主導的小組會黨派色彩過濃。但其他 146 名民主黨人則是投贊成票。</p>
+<p class="pqnote">眾議院以 365 票對 65 票贊成成立美中戰略競爭特別委員會，將調查中國經濟、技術與安全進展狀況並提出政策建議。委員會將由共和黨眾議員蓋拉格（Mike Gallagher）擔任主席。小組將在年底前向國會提出政策建議。65 張反對票都來自民主黨人，其中一些反對聲音表示擔心共和黨主導的小組會黨派色彩過濃。但其他 146 名民主黨人則是投贊成票。</p>
 
 
 
@@ -20,7 +20,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1024x576.jpg" alt="" class="wp-image-125598" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1536x864.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國眾議院新任議長共和黨籍麥卡錫（Kevin McCarthy）美國時間1月10日宣布成立「美中戰略競爭特別委員會」。<br>圖／擷取自Speaker Kevin McCarthy影片</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1024x576.jpg" alt="" class="wp-image-125598" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy-1536x864.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/dfc043ad-speaker-mccarthy.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國眾議院新任議長共和黨籍麥卡錫（Kevin McCarthy）美國時間1月10日宣布成立「美中戰略競爭特別委員會」。<br>圖／擷取自Speaker Kevin McCarthy影片</figcaption></figure></div>
 
 
 
