Update VOCUS 2023-01-19 patch

--- a/_posts/2023-01-16-VOCUS-半兵衛脇差-岸拜會的解讀-天下圍中升級版的美日同盟.html
+++ b/_posts/2023-01-16-VOCUS-半兵衛脇差-岸拜會的解讀-天下圍中升級版的美日同盟.html
@@ -8,7 +8,6 @@ tags: blog
 author: 謝文生
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">日前再度接受美國之音記者「向凌」的採訪，針對日本首相岸田文雄於1月13日在美國白宮跟拜登總統進行高峰會談的義意進行解析，同時南台灣美國商會研究員盛仰正及華盛頓哈德遜研究所(Hudson Institute)研究員長尾賢(Satoru Nagao)也各自接受採訪，感謝記者安排，將我的分析放在新聞的開頭與結尾，該新聞自台灣時間15日清晨發佈以來24小時左右，在推特上的點閱已達9.1萬人次；我將該連結放在文末。</div>
 <div class="draft-block draft--p left">我的分析內容如下：這次岸田首相跟拜登的會談，有對外及對內的雙重象徵目的。</div>
 <div class="draft-block draft--p left">在對外部份，岸田首相此行主要是就日本去年底通過的『安保3文書』的修訂，其中跟美國有關的『合作部份』進行確認，以及接下來合作的內容「如何展開」也進行確認，所以才會在峰會前先舉行外交、國防的「2＋2會議」。</div>
@@ -34,17 +33,7 @@ author: 謝文生
 <div class="draft-block draft--p left">接下來的最大考驗則是2024年後兩人是否仍然是『當時在位的元首』了。</div>
 <div class="draft-block draft--p left">以下是接受美國之音採訪的連結：</div>
 <div><h3><a href="https://www.voacantonese.com/a/kishida-and-biden-to-set-course-for-alliance-in-first-talks-in-washington-20230114/6919108.html">專家：美日首腦峰會宣示&quot;雙劍合璧&quot; 嚇阻中國&quot;不要輕舉妄動&quot;</a></h3><span>美日兩國1月13日在華盛頓舉行首腦峰會，並在會後發表聯合聲明。專家認為，美日合作對抗中國的方式有顯著的調整，日本將承擔更多的責任，美日首腦峰會也是對日本防衛政策重大改變的背書。 強化合作嚇阻中國勿輕舉妄動 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fgdb.voanews.com%2F09410000-0a00-0242-6579-08daf5a8c53d_w1200_r1.jpg&amp;width=550&amp;sign=HpcAHyhatXrJLgbWRNLZd1qkd_8IlI50CDuTKXmaP1w"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">推特的連結：</div>
-<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1614711993742786560?s=20&amp;t=_xYSmL7ENiVuMjS0rCZFHw"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1614711993742786560?s=20&amp;t=_xYSmL7ENiVuMjS0rCZFHw"></iframe></div>
 <div class="draft-block draft--p left">（本文結束）</div>
 <div class="draft-block draft--p left">（如您覺得這篇文章值得給予作者鼓勵， 請按下方心形的讚，感謝！）</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
