--- a/_posts/2023-01-16-VOCUS-灌籃高手the-first-slam-dunk-回憶最終篇襲來.html
+++ b/_posts/2023-01-16-VOCUS-灌籃高手the-first-slam-dunk-回憶最終篇襲來.html
@@ -39,7 +39,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">而井上雄彥對於籃球的熱愛即便連載結束也未消退，他與集英社、日本籃球協會等共同創立「灌籃高手獎學金」，資助想到美國打籃球的日本年輕選手。並在1999年也連載以輪椅籃球為主題的漫畫《REAL》。</div>
 <div class="draft-block draft--p left">這次的《灌籃高手THE FIRST Slam Dunk》其實並非作品第一次電影化。在過去《灌籃高手》就有出現4部劇場版電影。其中有湘北陵南和武園的練習賽、湘北對津久武的球賽、湘北對凌南的正式賽、與流川楓的中學故事。而這次的改編是漫畫最終戰從未被動畫改編的湘北對山王，也同於等待多年後，井上給予陪伴自己作品的紛絲，最好的賀禮。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/36bf7797-0405-4d83-bd75-fec82c171881.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/M7Amh3fE6e8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/M7Amh3fE6e8"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/daaa312c-232b-44c0-96f0-5095ffc102e3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <h3 class="draft-block draft--h3" name="header-6r00o">《灌籃高手THE FIRST Slam Dunk》值得一看嗎：</h3>
 <div class="draft-block draft--p left">這部電影預告當時出來時，因為人物採用3D技術而在看慣過去2D動畫的老觀眾來說，有些不能接受，但同時大家還是相信漫畫家井上雄彥的編劇功力，在最後日本首映時獲得不少好評，也成為能於新海誠新作《鈴芽之旅》和《阿凡達：水之道》等大作相匹敵的賣座動畫。</div>
@@ -52,4 +52,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">流川的故事基本上留在了1995年的電影版，櫻木的成長當然就是整部電視動畫。雖然井上雄彥在導這部電影時，希望讓所有人都看懂，但仍有一些地方還是需要先做功課補完。</div>
 <div class="draft-block draft--p left">這次雖然因為球賽和回憶同時進行，時間被切得很零碎，但我認為在熱血和角色球場表現上還是很有趣，且讓人滿意的。雖然多少有回憶殺加持，但能大到讓人多年後還是喜愛也是作品的真本事。</div>
 <div class="draft-block draft--p left">簡單來說《灌籃高手THE FIRST Slam Dunk》並非是有接觸過作品才能看懂的動畫電影，而是讓沒有經歷過籃球熱的新生代也會想回頭重新補完的有趣運動番，可以說有些作品即便在多年，那股感動從不變味。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/cxVo8S7Rju4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/cxVo8S7Rju4"></iframe></div>
