--- a/_posts/2023-01-18-VOCUS-漫談保守主義-完美即為不完美-除了神以外-別無永恆-1.html
+++ b/_posts/2023-01-18-VOCUS-漫談保守主義-完美即為不完美-除了神以外-別無永恆-1.html
@@ -11,7 +11,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">接著，我們要來談一談，一般人對保守主義的誤解，究竟出自何處，到底誰在散播？扣除近20年來的惡意，與各種長年的偏見，在台灣恐怕還要加上對「保守」兩字文義的濫用。</div>
 <div class="draft-block draft--p left">從前幾大章節，我們大致上可以理解，保守主義的幾個重要核心觀點（<a href="https://vocus.cc/article/63185754fd89780001c03833" target="_blank" class="draft--a">秩序</a>：保有過去美好之物、<a href="https://vocus.cc/article/63418653fd89780001a1dc0a" target="_blank" class="draft--a">共同體</a>：自律而後自由，以及以個人感官為基礎的理性觀）。最後將會圍繞在這幾個部分，擴張解釋與藉由案例解說。</div>
 <div><h3><a href="https://vocus.cc/article/634bb1f4fd897800011eaf00">漫談保守主義：人類是用感官去了解世界──理性（1）｜方格子 vocus</a></h3><span>之前提到共同體，在共同體的形成中，我們了解到秩序做為根基的重要，但這邊有不少疑問，為何「理性」在此的地位被貶低，宗教／信仰似乎被講得很重要？其實，這算是名詞誤用的結果，有些名詞的定義很嚴謹，但使用的人弄不清楚，望文生義下又接觸到不精確的說明，負負並不會在此得正 理性, 保守主義, 激進主義, 美國獨立, 法國大革命, 漫談保守主義, 政治實務, 教育文化, 科學, 信仰, 科學家, 3D, 宗教, 革命, 美國, 自然, 經驗, 人類</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fa6e8239a-162c-40cd-bc30-cfcf037d18e7.jpg%26width%3D1200%26sign%3DL_QnRtycTNueWZaeYR9K4KH7TWP-XauXkVB44Pbdx0w&amp;width=550&amp;sign=HehsFEB54N-CQZt5vdhzk_NRKLfv0m-l46BTRruD5mM"></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote">完美即為不完美──除了神以外，別無永恆</blockquote>
 <div class="draft-block draft--p left">這不是宗教警語，只是保守主義的基本精神，讓我們敬畏這個宇宙，承認人類的不完美，將標尺放在無法企及之處，作為信仰的指標。</div>
 <div class="draft-block draft--p left">若像筆者有接觸過較正規的信仰道理課程，從小開始接觸聖經者，比較有機會碰觸到信仰核心，這個核心並非教條，而是敬畏。出自內心的敬畏才有價值，而信仰本質是一種永遠的追尋，正因為人類是不完美的，才有努力完善的空間，就因為目標如此遙遠，我們才有持之以恆的理由。</div>
@@ -20,7 +19,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">嗯，當然不對，完全不正確。</div>
 <div class="draft-block draft--p left">保守主義是一個很大的體系，並非來自於一種僵化的教條，或是宗教的誓約。會很龐大難解，恰好說明保守主義並非條文，而是態度、精神、行為。</div>
 <div class="draft-block draft--p left">讓我們回到300年前，工業革命後造成的巨變開始，首先第一個要認知到的是，工業革命是不是一個突然發生，瞬間席捲世界的變化？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/bt6BxVIS6Gk"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/bt6BxVIS6Gk"></iframe></div>
 <ul>
   <li class="draft-block draft--li">編：《蒸汽男孩》這種東西是漫畫家／動畫家的想像……</li>
 </ul>
