--- a/_posts/2023-01-19-INMEDIA-封關集會攜打火機白電油-15歲男生上訴藏武罪得直-意圖損壞財產罪維持原判.html
+++ b/_posts/2023-01-19-INMEDIA-封關集會攜打火機白電油-15歲男生上訴藏武罪得直-意圖損壞財產罪維持原判.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/wc%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2020年3月2日，有人號召到灣仔入境事務大樓靜坐，要求政府封關。一名案發時15歲、現已考入大學的男學生被警方截查時，發現背包藏有「光時」旗幟、伸縮棍、白電油、打火機等物品，經審訊後被裁判官崔美霞裁定管有物品意圖損壞財產及管有攻擊性武器罪成，被判入勞教中心。男生不服定罪及刑期，提出上訴，高院法官黃崇厚今（19日）宣布，藏武罪上訴得直，但另一罪則維持原判，形容男生焚光他人財產的意圖昭然若揭。男生須繼續在勞教中心服刑。</p>
+<img src="https://www.inmediahk.net/files/column_images/wc%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2020年3月2日，有人號召到灣仔入境事務大樓靜坐，要求政府封關。一名案發時15歲、現已考入大學的男學生被警方截查時，發現背包藏有「光時」旗幟、伸縮棍、白電油、打火機等物品，經審訊後被裁判官崔美霞裁定管有物品意圖損壞財產及管有攻擊性武器罪成，被判入勞教中心。男生不服定罪及刑期，提出上訴，高院法官黃崇厚今（19日）宣布，藏武罪上訴得直，但另一罪則維持原判，形容男生焚燒他人財產的意圖昭然若揭。男生須繼續在勞教中心服刑。</p>
 <p><strong>官：伸縮棍可用以展示旗幟 攻擊性武器非唯一用途</strong></p>
 <p>法官黃崇厚指，案發時15歲的男生（代號WHH）管有涉案伸縮棍時，同時管有一塊旗幟，即使在他沒有作供的情況下，法庭推斷他有可能用此伸縮棍來展示旗幟，也不算是沒有證據下的憑空設想。黃官考慮證據所顯示的整體情況，認為原審裁判官崔美霞裁定伸縮棍屬攻擊性武器，只是其中一個合理推論，而非唯一合理推論，故就管有攻擊性武器罪裁定上訴得直，撤銷定罪。</p>
 <p><strong>警員查問前沒警誡 官：應拒讓男生對答呈堂</strong></p>
