--- a/_posts/2023-01-19-INMEDIA-盧寵茂-取消隔離令不代表新冠已消失-醫療系統仍有風險.html
+++ b/_posts/2023-01-19-INMEDIA-盧寵茂-取消隔離令不代表新冠已消失-醫療系統仍有風險.html
@@ -20,4 +20,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c2yjvS1J85" title="無標題"><img src="https://live.staticflickr.com/65535/52636544894_9e3c3eb226_c.jpg" width="800" alt="無標題" /></a></p>
 <p><strong>盧寵茂：本港已有「三個提升」 包括市民防疫知識</strong></p>
 <p>對於取消隔離令，盧寵茂就用較大篇幅解釋，稱本港已有「三個提升」，包括免疫力提升，現時第二針及第三針的疫苗接種率分別為93%及84%，並在大批市民感染後，已產生牢固的混合免疫屏障；加上醫院制訂有效的應變方案，及私家醫院協助，醫療抗疫能力已提升；再者是市民抗疫能力上升，三年來累積了不少防疫知識，院舍對預防及處理染感的能力亦大幅提升。</p>
+<p>在取消隔離令後，僱員在感染新冠後需要醫生紙以申領病假，安排與其他疾病一樣。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
